--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -130,7 +130,7 @@
   top: 10px;
   right: 10px;
   padding: 10px;
-  background-color: #007BFF;
+  background-color: #ff0000;
   color: white;
   cursor: pointer;
 }
